# iFragDI

./: .gitignore  ML_idea.md  README.md  README_pipeline.md  SCORING_EXPLAINER.md  blastpdb.py  bm5_interface_proximity.py  combine_ifrag_radi.py  combine_ifrag_radi_structaware.py  conservation.py  homolog_search.py  idea_improvement.md  ifrags.py  pyproject.toml  radi.py  radi_prepare.py  run_lightdock_from_ifragdi.py  structure_features.py  template_mmseqs.py
benchmark/: build_bm5_manifests.py  build_bm5_phase1_native_labels.py  build_bm5_phase1_patch_features.py  build_bm5_phase1_structure_features.py  build_bm5_phase1_training_table.py  evaluate_bm5_phase1_fixed_budget_recovery.py  evaluate_bm5_phase1_residue_scores.py  run_ifragdi_smoke_2jobs.sh  run_ifragdi_smoke_from_manifest.py  sbatch_ifragdi_BM5CP00019_retry.sh  sbatch_ifragdi_BM5CP00124.sh  sbatch_ifragdi_phase1_array.sh  sbatch_ifragdi_smoke_12.sh  sbatch_ifragdi_smoke_2jobs.sh  train_bm5_phase1_interface_calibrator.py  train_bm5_phase1_patch_calibrator.py  train_bm5_phase1_structure_ablation.py  train_bm5_phase1_structure_calibrator.py
benchmark/manifests/: bm5_chainpair_manifest.tsv  bm5_entity_manifest.tsv  bm5_manifest_report.md  bm5_manifest_summary.json  bm5_phase1_runnable_chainpairs.tsv  bm5_pilot_multichain_chainpairs_20.tsv  bm5_pilot_singlechain_20.tsv  bm5_smoke_nonAA_12.tsv  bm5_smoke_nonAA_nonHL_12.tsv
data/scripts_dataset/: README.md  build_intact_biogrid_dataset.py  (+7 more)
docs/: DEVELOPMENT_WORKFLOW.md  PROJECT_TODO.md  REPOSITORY_CONTENTS.md
tests/: test_conservation_allow_no_evidence.py
